# fsdksite

./: .gitignore  app.py  env_dist  index.html  pyproject.toml
config/: __init__.py  models.py
database/: base.py  engine.py
static/js/: stats.js
templates/: 404.html  bans.html  index.html  player.html  stats.html
