[tool.poetry]
name = "fsdksite"
version = "0.1.0"
description = "Fsdk cs 1.6 servers web"
authors = ["layerqa"]
license = "PRIVATE"

[tool.poetry.dependencies]
python = "^3.8"
aiomysql = "^0.1.1"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
Jinja2 = "^3.1.2"
humanize = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
